--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,39 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
-        
-jobs:
+    branches: ["main"]
 
+jobs:
   build_and_push:
     runs-on: ubuntu-latest
     environment: production
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Build the Docker image
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-    - name: Push Docker image
-      env:
-        DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+      - uses: actions/checkout@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build the Docker image
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+      - name: Push Docker image to Docker Hub
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+        run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.GITHUB_USERNAME }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Tag Docker image for GitHub Container Registry
+        env:
+          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.GITHUB_USERNAME }}/octopus-usage-exporter:latest
+      - name: Push Docker image to GitHub Container Registry
+        env:
+          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+        run: docker push ghcr.io/${{ env.GITHUB_USERNAME }}/octopus-usage-exporter:latest
