--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,13 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ secrets.GITHUB_USERNAME }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GCHR_TOKEN }}
       - name: Tag Docker image for GitHub Container Registry
         env:
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
-        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.GITHUB_USERNAME }}/octopus-usage-exporter:latest
+          GITHUB_USERNAME: ${{ github.actor }}
+        run: docker tag ${{ github.actor }}/octopus-usage-exporter:latest ghcr.io/${{ github.actor }}/octopus-usage-exporter:latest
       - name: Push Docker image to GitHub Container Registry
         env:
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
-        run: docker push ghcr.io/${{ env.GITHUB_USERNAME }}/octopus-usage-exporter:latest
+          GITHUB_USERNAME: ${{ github.actor }}
+        run: docker push ghcr.io/$${{ github.actor }}/octopus-usage-exporter:latest
