--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,8 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+      - name: PrepareReg Names
+        run: echo IMAGE_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -32,9 +34,9 @@ jobs:
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Tag Docker image for GitHub Container Registry
         env:
-          GITHUB_USERNAME: ${{ github.actor }}
-        run: docker tag ${{ github.actor }}/octopus-usage-exporter:latest ghcr.io/${{ github.actor }}/octopus-usage-exporter:latest
+          IMAGE_REPOSITORY: ${{ env.IMAGE_REPOSITORY }}
+        run: docker tag ${{ IMAGE_REPOSITORY }}/octopus-usage-exporter:latest ghcr.io/${{ IMAGE_REPOSITORY }}:latest
       - name: Push Docker image to GitHub Container Registry
         env:
-          GITHUB_USERNAME: ${{ github.actor }}
-        run: docker push ghcr.io/$${{ github.actor }}/octopus-usage-exporter:latest
+          IMAGE_REPOSITORY: ${{ env.IMAGE_REPOSITORY }}
+        run: docker push ghcr.io/${{ IMAGE_REPOSITORY }}:latest
