--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,6 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-      - name: PrepareReg Names
-        run: |
-          echo IMAGE_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -34,10 +31,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Tag Docker image for GitHub Container Registry
-        env:
-          IMAGE_REPOSITORY: ${{ env.IMAGE_REPOSITORY }}
-        run: docker tag ${{ IMAGE_REPOSITORY }}/octopus-usage-exporter:latest ghcr.io/${{ IMAGE_REPOSITORY }}:latest
+        run: docker tag ${{ github.repository }}/octopus-usage-exporter:latest ghcr.io/${{ github.repository }}:latest
       - name: Push Docker image to GitHub Container Registry
-        env:
-          IMAGE_REPOSITORY: ${{ env.IMAGE_REPOSITORY }}
-        run: docker push ghcr.io/${{ IMAGE_REPOSITORY }}:latest
+        run: docker push ghcr.io/${{ github.repository }}:latest
