--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,6 @@ jobs:
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-      - id: imagename
-        uses: vishalmamidi/lowercase-action@v1
-        with:
-          string: ${{ github.repository }}
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -35,6 +31,6 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
       - name: Tag Docker image for GitHub Container Registry
-        run: docker tag ${{ steps.imagename.outputs.lowercase }}/octopus-usage-exporter:latest ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest
+        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
       - name: Push Docker image to GitHub Container Registry
-        run: docker push ghcr.io/${{ steps.imagename.outputs.lowercase }}:latest
+        run: docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
