--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,44 +3,45 @@ name: Docker Image CI
 on:
   push:
     tags:
-      - "*"
+      - "**"
   workflow_dispatch:
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
     environment: production
+    env:
+      DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      TAG_NAME: ${{ github.ref_name }}
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build the Docker image
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+
       - name: Push Docker image to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
+
       - name: Tag Docker image for GitHub Container Registry
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         run: |
           docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-          TAG_NAME=${{ github.event.ref }}
-          TAG_NAME=${TAG_NAME#refs/tags/}
-          docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${TAG_NAME}
+          docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
+
       - name: Push Docker image to GitHub Container Registry
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-        run: docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+        run: |
+          docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+          docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
