Move to pydantic settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "gql==3.4.1",
     "httpx==0.25.1",
     "prometheus-client==0.22.1",
+    "pydantic-settings>=2.10.1",
     "python-jose==3.3.0",
     "requests==2.32.4",
     "requests-toolbelt==1.0.0",
