--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
+annotated-types==0.7.0
+anyio==4.9.0
+backoff==2.2.1
+certifi==2025.7.14
+charset-normalizer==3.4.2
+ecdsa==0.19.1
 gql==3.4.1
+graphql-core==3.2.6
+h11==0.16.0
+httpcore==1.0.9
 httpx==0.25.1
-prometheus_client==0.22.1
-python_jose==3.3.0
+idna==3.10
+multidict==6.6.3
+prometheus-client==0.22.1
+propcache==0.3.2
+pyasn1==0.6.1
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+python-dotenv==1.1.1
+python-jose==3.3.0
 requests==2.32.4
-requests_toolbelt==1.0.0
+requests-toolbelt==1.0.0
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+typing-extensions==4.14.1
+typing-inspection==0.4.1
+urllib3==2.5.0
+yarl==1.20.1
