--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ license-files = ["LICENSE"]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "backoff>=2.2.1",
     "gql==3.4.1",
     "prometheus-client==0.22.1",
     "pydantic>=2.11.7",
@@ -15,7 +16,6 @@ dependencies = [
     "python-jose==3.4.0",
     "requests==2.32.4",
     "requests-toolbelt==1.0.0",
-    "retrying>=1.4.1",
 ]
 
 
