--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [project]
 name = "octopus-usage-exporter"
 authors = [{ name = "Joseph Ryan-Palmer", email = "joseph@ryan-palmer.com" }]
-version = "0.1.4"
+version = "0.1.5"
 description = "Prometheus exporter for Octopus Energy metrics. Works best when coupled with an Octopus Home Mini."
 license = "AGPL-3.0-or-later"
 license-files = ["LICENSE"]
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "backoff>=2.2.1",
     "gql==3.4.1",
     "prometheus-client==0.22.1",
     "pydantic>=2.11.7",
