--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "backoff>=2.2.1",
-    "gql==3.4.1",
-    "prometheus-client==0.22.1",
-    "pydantic>=2.11.7",
+    "gql==4.0.0",
+    "prometheus-client==0.23.1",
+    "pydantic>=2.11.9",
     "pydantic-settings>=2.10.1",
-    "python-jose==3.4.0",
-    "requests==2.32.4",
+    "pytest>=8.4.2",
+    "python-jose==3.5.0",
+    "requests==2.32.5",
     "requests-toolbelt==1.0.0",
 ]
 
