--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,3 +22,4 @@ jobs:
           pip install pytest prometheus-client "gql[all]" pydantic-settings
       - name: Test with pytest
         run: python -m pytest tests/
+        working-directory: ./octopus_usage_exporter
