--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest prometheus-client "gql[all]" pydantic-settings
+          pip install -e .[test]
       - name: Test with pytest
         run: python -m pytest tests/
         working-directory: ./octopus_usage_exporter
