--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,10 +26,18 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+        run: docker build . --file Dockerfile --tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
 
-      - name: Push Docker image to Docker Hub
+      - name: Tag Docker image as latest (if no dash in tag)
+        if: ${{ !contains(env.TAG_NAME, '-') }}
+        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }} ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+
+      - name: Push Docker image to Docker Hub (latest)
+        if: ${{ !contains(env.TAG_NAME, '-') }}
         run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+
+      - name: Push Docker image to Docker Hub (tag)
+        run: docker push ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
@@ -38,12 +46,16 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Tag Docker image for GitHub Container Registry
-        run: |
-          docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-          docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
+      - name: Tag Docker image for GitHub Container Registry (latest)
+        if: ${{ !contains(env.TAG_NAME, '-') }}
+        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }} ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
 
-      - name: Push Docker image to GitHub Container Registry
-        run: |
-          docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
-          docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
+      - name: Tag Docker image for GitHub Container Registry (tag)
+        run: docker tag ${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }} ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
+
+      - name: Push Docker image to GitHub Container Registry (latest)
+        if: ${{ !contains(env.TAG_NAME, '-') }}
+        run: docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:latest
+
+      - name: Push Docker image to GitHub Container Registry (tag)
+        run: docker push ghcr.io/${{ env.DOCKER_USERNAME }}/octopus-usage-exporter:${{ env.TAG_NAME }}
