--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Run Unit Tests
+name: Run Python Tests
 permissions:
   contents: read
 
@@ -9,7 +9,7 @@ on:
     branches: ["main"]
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest
 
     steps:
